@@ -1,6 +1,8 @@
 == Changes for 0.0.4 - May 11, 2005
 
 * Net::IRC now tracks the topics of channels.
+* It's now possible to list the people who are on a channel and the channels a
+  person has joined.
 
 == Changes for 0.0.3 - May 7, 2005
 
